# opensvc-gateway-mcp

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  docker.yml
src/opensvc_gateway_mcp/: __init__.py  config.py  main.py
src/opensvc_gateway_mcp/api/: dependencies.py  error_handlers.py  router.py
src/opensvc_gateway_mcp/api/routes/: ai.py  auth.py  health.py  internal_sessions.py  mcp.py
src/opensvc_gateway_mcp/clients/: collector.py  llm.py  mcp.py
src/opensvc_gateway_mcp/clients/llm/: __init__.py  anthropic.py  base.py  factory.py  openai_compatible.py
src/opensvc_gateway_mcp/core/: __init__.py  auth_service.py  mcp_proxy.py  orchestrator.py  security.py  session_service.py  sessions.py  streaming.py
src/opensvc_gateway_mcp/schemas/: ai.py  auth.py  mcp.py  sessions.py
tests/: fakes.py  test_ai_routes.py  test_anthropic_llm_client.py  test_auth.py  test_collector_client.py  test_health.py  test_internal_sessions.py  test_mcp_client.py  test_mcp_routes.py
