[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "opensvc-gateway-mcp"
version = "0.1.0"
description = "FastAPI gateway securing OpenSVC Collector MCP access with user Basic Auth pass-through."
readme = "README.md"
requires-python = ">=3.13"
license = { text = "MIT" }
dependencies = [
  "fastapi",
  "fastmcp-slim[client]==3.3.1",
  "httpx",
  "pydantic-settings",
  "redis",
  "uvicorn",
]

[project.optional-dependencies]
dev = [
  "pytest",
  "ruff",
]

[project.scripts]
opensvc-gateway-mcp = "opensvc_gateway_mcp.main:run"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
